2008-06-02  Michael Biebl  <mbiebl@gmail.com>

	* src/trackerd/Makefile.am:
	* src/libtracker-common/Makefile.am: The accent stripping
	functionality using unac, is now in libtracker-common, so link
	libtracker-common against unac, not trackerd.

2008-06-02  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/trackerd/tracker-db-sqlite.c:
	* src/trackerd/tracker-xesam-manager.c:
	* src/trackerd/tracker-xesam-manager.h:

	Waking up the LiveSearches for not-yet refactored methods that also
	(still) insert, delete and update the database

2008-06-02  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/Makefile.am:
	* src/trackerd/tracker-db-sqlite.c:
	* src/trackerd/tracker-dbus.c:
	* src/trackerd/tracker-email-evolution.c:
	* src/trackerd/tracker-email-kmail.c:
	* src/trackerd/tracker-email-modest.c:
	* src/trackerd/tracker-email-thunderbird.c:
	* src/trackerd/tracker-email-utils.c:
	* src/trackerd/tracker-fam.c:
	* src/trackerd/tracker-inotify.c:
	* src/trackerd/tracker-main.c:
	* src/trackerd/tracker-poll.c:
	* src/trackerd/tracker-process-files.c:
	* src/trackerd/tracker-watch.h:
	* src/trackerd/tracker-watcher-fam.c: 
	* src/trackerd/tracker-watcher-inotify.c:
	* src/trackerd/tracker-watcher-poll.c:
	* src/trackerd/tracker-watcher-win.c: 
	* src/trackerd/tracker-watcher.h:
	* src/trackerd/tracker-win-fs-changes.c: Moved all watch files so
	they use the prefix tracker-watch-*. Updated the API to have a
	consistent tracker_watcher_() prefix. Refactored the FAM, inotify,
	poll and windows backends. 

2008-06-02  Carlos Garnacho  <carlos@imendio.com>

	* src/libtracker-common/tracker-field.h: Add TRACKER_TYPE_FIELD_TYPE
	define for the TrackerFieldType enum GType.
	* src/libtracker-common/tracker-ontology.c (tracker_ontology_init)
	(tracker_ontology_shutdown): Make the class for the TrackerFieldType
	enum is created during the ontology lifetime.
	* src/tracker-indexer/tracker-indexer-db.c (load_metadata_file): Moved
	from trackerd.