@@ -1,3 +1,10 @@
+2008-06-03  Martyn Russell  <martyn@imendio.com>
+
+	* src/trackerd/Makefile.am:
+	* src/trackerd/tracker-index-stage.[ch]:
+	* src/trackerd/tracker-main.h: Removed tracker-index-stage, it is
+	no longer used.
+
 2008-06-02  Michael Biebl  <mbiebl@gmail.com>
 
 	* src/trackerd/Makefile.am:
